--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,12 +16,36 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+* {
+  font-family: "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console",
+    "Courier New", monospace !important;
 }
+
+.ant-form {
+  color: white;
+}
+
+.costum-ui-input::placeholder {
+  color: rgb(107 114 128);
+}
+.costum-ui-input {
+  color: white;
+  border: none;
+  border-radius: 2px;
+  background-color: rgb(17 24 39)
+}
+
+.ant-select-selector {
+  background-color: rgb(17 24 39) !important;
+  color: white !important;
+  border: none !important;
+}
+
+.ant-form-item .ant-form-item-label > label {
+  color: white;
+}
+/* 
+.fontf-code {
+  font-family: "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console",
+    "Courier New", monospace;
+} */
