--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,17 @@
 * {
   font-family: "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console",
     "Courier New", monospace !important;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+.bg-code-editor {
+  background-color: #111827;
 }
 
 .ant-form {
@@ -26,24 +37,54 @@
 }
 
 .costum-ui-input::placeholder {
-  color: rgb(107 114 128);
+  color: #6b7280;
 }
 .costum-ui-input {
   color: white;
-  border: none;
+  border: #6b7280 3px solid !important;
   border-radius: 2px;
-  background-color: rgb(17 24 39)
+  background-color: #111827
+}
+
+.ant-select-item-option-content {
+  color: white;
+}
+
+.ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+  background-color: #1f2937 !important;
 }
 
 .ant-select-selector {
-  background-color: rgb(17 24 39) !important;
+  background-color: #111827 !important;
   color: white !important;
-  border: none !important;
+  border: #6b7280 3px solid !important;
+  border-radius: 2px !important;
+}
+
+.ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+  color: #6b7280;
+}
+
+.ant-select-selector:hover,
+.ant-select-selector:focus,
+.ant-select-focused:where(.css-dev-only-do-not-override-1vtf12y).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector {
+  border: #6b7280 3px solid !important
+}
+.ant-message-notice .ant-message-notice-content {
+  color: white;
+  background: #111827 !important
 }
 
 .ant-form-item .ant-form-item-label > label {
   color: white;
 }
+
+
+.ant-empty-normal .ant-empty-description {
+  color: white;
+}
+
+
 /* 
 .fontf-code {
   font-family: "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console",
